# kate-links

./: .kateproject  AUTHORS  CMakeLists.txt  COPYING  README.md
src/: CMakeLists.txt  ktexteditor_links.desktop  linksplugin.cpp  linksplugin.h  linksplugindocument.cpp  linksplugindocument.h
